--- a/index.html
+++ b/index.html
@@ -3,13 +3,81 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>Star Wars RPG</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/reset.css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
     <script src="assets/javascript/game.js"></script>
 </head>
 <body>
-    
+    <!-- Title Container -->
+   <div class="container">
+       <div class="row">
+           <div class="col-12" id="title">
+            <h1>Star Wars RPG</h1>
+           </div>
+       </div>
+   </div>
+   <!-- End of Title Container -->
+
+   <!-- Character Picture Container -->
+   <div class="container">
+       <div class="row text-center">
+           <div class="col-3" id="BobaFett">
+               <img class= "charPic" src = "assets/images/boba-fett.jpg">
+               <p>Boba Fett</p>
+           </div>
+           <div class="col-3" id="IG88">
+                <img class= "charPic" src = "assets/images/ig88.jpg">
+                <p>IG-88</p>
+           </div>
+           <div class="col-3" id="KyloRen">
+                <img class= "charPic" src = "assets/images/kylo-ren.jpg">
+                <p>Kylo Ren</p>
+           </div>
+           <div class="col-3" id="LukeSkywalker">
+                <img class= "charPic" src = "assets/images/luke-skywalker.jpg">
+                <p>Luke Skywalker</p>
+           </div>
+       </div>
+   </div>
+   <!-- End of Character Picture Container -->
+
+   <!-- Character Select Container -->
+   <div class="container">
+       <div class="row">
+           <div class="col-3">
+               <p>Your Character:</p>
+           </div>
+            <div class="col-3 text-center" id="charSelect"></div>
+       </div>
+   </div>
+   <!-- End of Character Select Container -->
+
+   <!-- Enemies Container -->
+   <div class="container">
+       <div class="row" id="enemies">
+        <div class="col-3">
+            <p>Enemies available to fight</p>
+        </div>    
+       </div>
+   </div>
+   <!-- End of Enemies Container -->
+
+   <!-- Defender Container -->
+   <div class="container">
+       <div class="row" id="defender">
+           <div class="col-3">
+               <p>Current enemy</p>
+           </div>
+       </div>
+   </div>
+
 </body>
 </html>
