--- a/index.html
+++ b/index.html
@@ -12,72 +12,37 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
-    <script src="assets/javascript/game.js"></script>
+    
 </head>
 <body>
-    <!-- Title Container -->
-   <div class="container">
-       <div class="row">
-           <div class="col-12" id="title">
-            <h1>Star Wars RPG</h1>
-           </div>
-       </div>
-   </div>
-   <!-- End of Title Container -->
+  
+    <div class="container">
+        <h1 id="mainTitle">Star Wars RPG</h1>
+    </div>
+    <div class="container reset">
+        <div class="row">
+            <div id="heroes" class="col-12">
+                <div class="title">Choose your Character</div>
+            </div>
+        </div>
+    </div>
 
-   <!-- Character Picture Container -->
-   <div class="container">
-       <div class="row text-center">
-           <div class="col-3" id="BobaFett">
-               <img class= "charPic" src = "assets/images/boba-fett.jpg">
-               <p>Boba Fett</p>
-           </div>
-           <div class="col-3" id="IG88">
-                <img class= "charPic" src = "assets/images/ig88.jpg">
-                <p>IG-88</p>
-           </div>
-           <div class="col-3" id="KyloRen">
-                <img class= "charPic" src = "assets/images/kylo-ren.jpg">
-                <p>Kylo Ren</p>
-           </div>
-           <div class="col-3" id="LukeSkywalker">
-                <img class= "charPic" src = "assets/images/luke-skywalker.jpg">
-                <p>Luke Skywalker</p>
-           </div>
-       </div>
-   </div>
-   <!-- End of Character Picture Container -->
+    <div class="container">
+        <div class="row">
+            <div class="col-4" id="yourHero"></div>
+            <div class="col-4" id="fightBtn"></div>
+            <div class="col-4" id="currentEnemy"></div>
+        </div>
+    </div>
 
-   <!-- Character Select Container -->
-   <div class="container">
-       <div class="row">
-           <div class="col-3">
-               <p>Your Character:</p>
-           </div>
-            <div class="col-3 text-center" id="charSelect"></div>
-       </div>
-   </div>
-   <!-- End of Character Select Container -->
-
-   <!-- Enemies Container -->
-   <div class="container">
-       <div class="row" id="enemies">
-        <div class="col-3">
-            <p>Enemies available to fight</p>
-        </div>    
-       </div>
-   </div>
-   <!-- End of Enemies Container -->
-
-   <!-- Defender Container -->
-   <div class="container">
-       <div class="row" id="defender">
-           <div class="col-3">
-               <p>Current enemy</p>
-           </div>
-       </div>
-   </div>
+    <div class="container">
+        <div class="row">
+            <div id="enemies"></div>
+        </div>
+    </div>
+    
+    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
+    <script src="assets/javascript/game.js"></script>
 
 </body>
 </html>
