Formatting and styling updates

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="container">
         <div class="row">
             <div class="col-4" id="yourHero"></div>
-            <div class="col-4" id="fightBtn"></div>
+            <div class="col-4 text-center" id="fightBtn"></div>
             <div class="col-4" id="currentEnemy"></div>
         </div>
     </div>
