--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div>
 
     <div class="container">
-        <div class="row">
+        <div class="row justify-content-center align-items-center">
             <div id="enemies"></div>
         </div>
     </div>
